src/parse-cdl.output
Terminals which are not used

   TAIDATE
   TYPEDEF
   ARRAY
   UNION
   ERROR
   FILENAME


State 60 conflicts: 1 shift/reduce


Grammar

    0 $accept: Certificate_Description $end

    1 Certificate_Description: Declarations

    2 Declarations: Declarations Declaration
    3             | Declaration

    4 Declaration: ADT_Declaration
    5            | CertificateHeader_Declaration
    6            | Certificate_Declaration

    7 ADT_Declaration: ID ":" Base_Type ";"
    8                | ID ":" ADT "," Constraints ";"

    9 @1: /* empty */

   10 @2: /* empty */

   11 CertificateHeader_Declaration: CERTIFICATEHEADER ":" CLASS "{" @1 Field_Declarations @2 "}" ";"

   12 @3: /* empty */

   13 @4: /* empty */

   14 Certificate_Declaration: ID ":" CERTIFICATE "{" @3 Field_Declarations @4 "}" ";"

   15 Field_Declarations: Field_Declarations Field_Declaration
   16                   | Field_Declaration

   17 Field_Declaration: ID ":" Base_Type ";"
   18                  | ID ":" ADT ";"
   19                  | ID ":" ADT "," Constraints ";"

   20 Base_Type: Base_Type "," Constraints
   21          | Scalar_Type
   22          | Vector_Type
   23          | Array_Type
   24          | Class_Type
   25          | Enum_Type

   26 Scalar_Type: Int_Type
   27            | Char_Type
   28            | Decimal_Type
   29            | Float_Type
   30            | Date_Type

   31 Vector_Type: VECTOR OF Scalar_Type
   32            | VECTOR OF ADT

   33 Array_Type: Scalar_Type "[" NUMBER "]"

   34 Int_Type: INTX
   35         | UINTX

   36 Char_Type: CHAR
   37          | WCHAR

   38 Enum_Type: ENUM "{" Id_List "}"

   39 Id_List: Id_List "," ID
   40        | ID

   41 Decimal_Type: DECIMALD

   42 Float_Type: FLOAT32
   43           | FLOAT64

   44 Date_Type: DATE
   45          | UTCDATE

   46 @5: /* empty */

   47 @6: /* empty */

   48 Class_Type: CLASS "{" @5 Field_Declarations @6 "}"

   49 @7: /* empty */

   50 @8: /* empty */

   51 Class_Type: ADT CLASS "{" @7 Field_Redefs @8 "}"

   52 Field_Redefs: Field_Redefs Field_Redef
   53             | Field_Redef

   54 Field_Redef: ID ":" Constraints ";"
   55            | Field_Declaration

   56 Constraints: Range "," Accuracy
   57            | Range
   58            | Accuracy

   59 Range: RANGE "=" Date_Bound
   60      | RANGE "=" NUMBER
   61      | RANGE "=" NUMBER DOTDOT NUMBER
   62      | RANGE "=" Date_Bound DOTDOT Date_Bound
   63      | RANGE "=" ">" NUMBER DOTDOT NUMBER
   64      | RANGE "=" ">" Date_Bound DOTDOT Date_Bound
   65      | RANGE "=" ">" NUMBER DOTDOT "<" NUMBER
   66      | RANGE "=" ">" Date_Bound DOTDOT "<" Date_Bound
   67      | RANGE "=" NUMBER DOTDOT "<" NUMBER
   68      | RANGE "=" Date_Bound DOTDOT "<" Date_Bound
   69      | RANGE "=" ID

   70 Accuracy: ACCURACY "=" FRACTION

   71 Date_Bound: YEAR "(" NUMBER ")"
   72           | MONTH "(" NUMBER ")"
   73           | DATE "(" NUMBER ")"
   74           | NUMBER "/" NUMBER "/" NUMBER


Terminals, with rules where they appear

$end (0) 0
error (256)
DATE (258) 44 73
UTCDATE (259) 45
TAIDATE (260)
CLASS (261) 11 48 51
ENUM (262) 38
ACCURACY (263) 70
YEAR (264) 71
MONTH (265) 72
VECTOR (266) 31 32
TYPEDEF (267)
RANGE (268) 59 60 61 62 63 64 65 66 67 68 69
CERTIFICATE (269) 14
CERTIFICATEHEADER (270) 11
OF (271) 31 32
WCHAR (272) 37
CHAR (273) 36
ARRAY (274)
UNION (275)
FLOAT32 (276) 42
FLOAT64 (277) 43
ERROR (278)
ADT (279) 8 18 19 32 51
ID (280) 7 8 14 17 18 19 39 40 54 69
INTX (281) 34
UINTX (282) 35
FILENAME (283)
DECIMALD (284) 41
NUMBER (285) 33 60 61 63 65 67 71 72 73 74
FRACTION (286) 70
";" (287) 7 8 11 14 17 18 19 54
"," (288) 8 19 20 39 56
"(" (289) 71 72 73
")" (290) 71 72 73
"[" (291) 33
"]" (292) 33
DOTDOT (293) 61 62 63 64 65 66 67 68
"=" (294) 59 60 61 62 63 64 65 66 67 68 69 70
":" (295) 7 8 11 14 17 18 19 54
"{" (296) 11 14 38 48 51
"}" (297) 11 14 38 48 51
">" (298) 63 64 65 66
"<" (299) 65 66 67 68
"/" (300) 74


Nonterminals, with rules where they appear

$accept (46)
    on left: 0
Certificate_Description (47)
    on left: 1, on right: 0
Declarations (48)
    on left: 2 3, on right: 1 2
Declaration (49)
    on left: 4 5 6, on right: 2 3
ADT_Declaration (50)
    on left: 7 8, on right: 4
CertificateHeader_Declaration (51)
    on left: 11, on right: 5
@1 (52)
    on left: 9, on right: 11
@2 (53)
    on left: 10, on right: 11
Certificate_Declaration (54)
    on left: 14, on right: 6
@3 (55)
    on left: 12, on right: 14
@4 (56)
    on left: 13, on right: 14
Field_Declarations (57)
    on left: 15 16, on right: 11 14 15 48
Field_Declaration (58)
    on left: 17 18 19, on right: 15 16 55
Base_Type (59)
    on left: 20 21 22 23 24 25, on right: 7 17 20
Scalar_Type (60)
    on left: 26 27 28 29 30, on right: 21 31 33
Vector_Type (61)
    on left: 31 32, on right: 22
Array_Type (62)
    on left: 33, on right: 23
Int_Type (63)
    on left: 34 35, on right: 26
Char_Type (64)
    on left: 36 37, on right: 27
Enum_Type (65)
    on left: 38, on right: 25
Id_List (66)
    on left: 39 40, on right: 38 39
Decimal_Type (67)
    on left: 41, on right: 28
Float_Type (68)
    on left: 42 43, on right: 29
Date_Type (69)
    on left: 44 45, on right: 30
Class_Type (70)
    on left: 48 51, on right: 24
@5 (71)
    on left: 46, on right: 48
@6 (72)
    on left: 47, on right: 48
@7 (73)
    on left: 49, on right: 51
@8 (74)
    on left: 50, on right: 51
Field_Redefs (75)
    on left: 52 53, on right: 51 52
Field_Redef (76)
    on left: 54 55, on right: 52 53
Constraints (77)
    on left: 56 57 58, on right: 8 19 20 54
Range (78)
    on left: 59 60 61 62 63 64 65 66 67 68 69, on right: 56 57
Accuracy (79)
    on left: 70, on right: 56 58
Date_Bound (80)
    on left: 71 72 73 74, on right: 59 62 64 66 68


state 0

    0 $accept: . Certificate_Description $end

    CERTIFICATEHEADER  shift, and go to state 1
    ID                 shift, and go to state 2

    Certificate_Description        go to state 3
    Declarations                   go to state 4
    Declaration                    go to state 5
    ADT_Declaration                go to state 6
    CertificateHeader_Declaration  go to state 7
    Certificate_Declaration        go to state 8


state 1

   11 CertificateHeader_Declaration: CERTIFICATEHEADER . ":" CLASS "{" @1 Field_Declarations @2 "}" ";"

    ":"  shift, and go to state 9


state 2

    7 ADT_Declaration: ID . ":" Base_Type ";"
    8                | ID . ":" ADT "," Constraints ";"
   14 Certificate_Declaration: ID . ":" CERTIFICATE "{" @3 Field_Declarations @4 "}" ";"

    ":"  shift, and go to state 10


state 3

    0 $accept: Certificate_Description . $end

    $end  shift, and go to state 11


state 4

    1 Certificate_Description: Declarations .
    2 Declarations: Declarations . Declaration

    CERTIFICATEHEADER  shift, and go to state 1
    ID                 shift, and go to state 2

    $default  reduce using rule 1 (Certificate_Description)

    Declaration                    go to state 12
    ADT_Declaration                go to state 6
    CertificateHeader_Declaration  go to state 7
    Certificate_Declaration        go to state 8


state 5

    3 Declarations: Declaration .

    $default  reduce using rule 3 (Declarations)


state 6

    4 Declaration: ADT_Declaration .

    $default  reduce using rule 4 (Declaration)


state 7

    5 Declaration: CertificateHeader_Declaration .

    $default  reduce using rule 5 (Declaration)


state 8

    6 Declaration: Certificate_Declaration .

    $default  reduce using rule 6 (Declaration)


state 9

   11 CertificateHeader_Declaration: CERTIFICATEHEADER ":" . CLASS "{" @1 Field_Declarations @2 "}" ";"

    CLASS  shift, and go to state 13


state 10

    7 ADT_Declaration: ID ":" . Base_Type ";"
    8                | ID ":" . ADT "," Constraints ";"
   14 Certificate_Declaration: ID ":" . CERTIFICATE "{" @3 Field_Declarations @4 "}" ";"

    DATE         shift, and go to state 14
    UTCDATE      shift, and go to state 15
    CLASS        shift, and go to state 16
    ENUM         shift, and go to state 17
    VECTOR       shift, and go to state 18
    CERTIFICATE  shift, and go to state 19
    WCHAR        shift, and go to state 20
    CHAR         shift, and go to state 21
    FLOAT32      shift, and go to state 22
    FLOAT64      shift, and go to state 23
    ADT          shift, and go to state 24
    INTX         shift, and go to state 25
    UINTX        shift, and go to state 26
    DECIMALD     shift, and go to state 27

    Base_Type     go to state 28
    Scalar_Type   go to state 29
    Vector_Type   go to state 30
    Array_Type    go to state 31
    Int_Type      go to state 32
    Char_Type     go to state 33
    Enum_Type     go to state 34
    Decimal_Type  go to state 35
    Float_Type    go to state 36
    Date_Type     go to state 37
    Class_Type    go to state 38


state 11

    0 $accept: Certificate_Description $end .

    $default  accept


state 12

    2 Declarations: Declarations Declaration .

    $default  reduce using rule 2 (Declarations)


state 13

   11 CertificateHeader_Declaration: CERTIFICATEHEADER ":" CLASS . "{" @1 Field_Declarations @2 "}" ";"

    "{"  shift, and go to state 39


state 14

   44 Date_Type: DATE .

    $default  reduce using rule 44 (Date_Type)


state 15

   45 Date_Type: UTCDATE .

    $default  reduce using rule 45 (Date_Type)


state 16

   48 Class_Type: CLASS . "{" @5 Field_Declarations @6 "}"

    "{"  shift, and go to state 40


state 17

   38 Enum_Type: ENUM . "{" Id_List "}"

    "{"  shift, and go to state 41


state 18

   31 Vector_Type: VECTOR . OF Scalar_Type
   32            | VECTOR . OF ADT

    OF  shift, and go to state 42


state 19

   14 Certificate_Declaration: ID ":" CERTIFICATE . "{" @3 Field_Declarations @4 "}" ";"

    "{"  shift, and go to state 43


state 20

   37 Char_Type: WCHAR .

    $default  reduce using rule 37 (Char_Type)


state 21

   36 Char_Type: CHAR .

    $default  reduce using rule 36 (Char_Type)


state 22

   42 Float_Type: FLOAT32 .

    $default  reduce using rule 42 (Float_Type)


state 23

   43 Float_Type: FLOAT64 .

    $default  reduce using rule 43 (Float_Type)


state 24

    8 ADT_Declaration: ID ":" ADT . "," Constraints ";"
   51 Class_Type: ADT . CLASS "{" @7 Field_Redefs @8 "}"

    CLASS  shift, and go to state 44
    ","    shift, and go to state 45


state 25

   34 Int_Type: INTX .

    $default  reduce using rule 34 (Int_Type)


state 26

   35 Int_Type: UINTX .

    $default  reduce using rule 35 (Int_Type)


state 27

   41 Decimal_Type: DECIMALD .

    $default  reduce using rule 41 (Decimal_Type)


state 28

    7 ADT_Declaration: ID ":" Base_Type . ";"
   20 Base_Type: Base_Type . "," Constraints

    ";"  shift, and go to state 46
    ","  shift, and go to state 47


state 29

   21 Base_Type: Scalar_Type .
   33 Array_Type: Scalar_Type . "[" NUMBER "]"

    "["  shift, and go to state 48

    $default  reduce using rule 21 (Base_Type)


state 30

   22 Base_Type: Vector_Type .

    $default  reduce using rule 22 (Base_Type)


state 31

   23 Base_Type: Array_Type .

    $default  reduce using rule 23 (Base_Type)


state 32

   26 Scalar_Type: Int_Type .

    $default  reduce using rule 26 (Scalar_Type)


state 33

   27 Scalar_Type: Char_Type .

    $default  reduce using rule 27 (Scalar_Type)


state 34

   25 Base_Type: Enum_Type .

    $default  reduce using rule 25 (Base_Type)


state 35

   28 Scalar_Type: Decimal_Type .

    $default  reduce using rule 28 (Scalar_Type)


state 36

   29 Scalar_Type: Float_Type .

    $default  reduce using rule 29 (Scalar_Type)


state 37

   30 Scalar_Type: Date_Type .

    $default  reduce using rule 30 (Scalar_Type)


state 38

   24 Base_Type: Class_Type .

    $default  reduce using rule 24 (Base_Type)


state 39

   11 CertificateHeader_Declaration: CERTIFICATEHEADER ":" CLASS "{" . @1 Field_Declarations @2 "}" ";"

    $default  reduce using rule 9 (@1)

    @1  go to state 49


state 40

   48 Class_Type: CLASS "{" . @5 Field_Declarations @6 "}"

    $default  reduce using rule 46 (@5)

    @5  go to state 50


state 41

   38 Enum_Type: ENUM "{" . Id_List "}"

    ID  shift, and go to state 51

    Id_List  go to state 52


state 42

   31 Vector_Type: VECTOR OF . Scalar_Type
   32            | VECTOR OF . ADT

    DATE      shift, and go to state 14
    UTCDATE   shift, and go to state 15
    WCHAR     shift, and go to state 20
    CHAR      shift, and go to state 21
    FLOAT32   shift, and go to state 22
    FLOAT64   shift, and go to state 23
    ADT       shift, and go to state 53
    INTX      shift, and go to state 25
    UINTX     shift, and go to state 26
    DECIMALD  shift, and go to state 27

    Scalar_Type   go to state 54
    Int_Type      go to state 32
    Char_Type     go to state 33
    Decimal_Type  go to state 35
    Float_Type    go to state 36
    Date_Type     go to state 37


state 43

   14 Certificate_Declaration: ID ":" CERTIFICATE "{" . @3 Field_Declarations @4 "}" ";"

    $default  reduce using rule 12 (@3)

    @3  go to state 55


state 44

   51 Class_Type: ADT CLASS . "{" @7 Field_Redefs @8 "}"

    "{"  shift, and go to state 56


state 45

    8 ADT_Declaration: ID ":" ADT "," . Constraints ";"

    ACCURACY  shift, and go to state 57
    RANGE     shift, and go to state 58

    Constraints  go to state 59
    Range        go to state 60
    Accuracy     go to state 61


state 46

    7 ADT_Declaration: ID ":" Base_Type ";" .

    $default  reduce using rule 7 (ADT_Declaration)


state 47

   20 Base_Type: Base_Type "," . Constraints

    ACCURACY  shift, and go to state 57
    RANGE     shift, and go to state 58

    Constraints  go to state 62
    Range        go to state 60
    Accuracy     go to state 61


state 48

   33 Array_Type: Scalar_Type "[" . NUMBER "]"

    NUMBER  shift, and go to state 63


state 49

   11 CertificateHeader_Declaration: CERTIFICATEHEADER ":" CLASS "{" @1 . Field_Declarations @2 "}" ";"

    ID  shift, and go to state 64

    Field_Declarations  go to state 65
    Field_Declaration   go to state 66


state 50

   48 Class_Type: CLASS "{" @5 . Field_Declarations @6 "}"

    ID  shift, and go to state 64

    Field_Declarations  go to state 67
    Field_Declaration   go to state 66


state 51

   40 Id_List: ID .

    $default  reduce using rule 40 (Id_List)


state 52

   38 Enum_Type: ENUM "{" Id_List . "}"
   39 Id_List: Id_List . "," ID

    ","  shift, and go to state 68
    "}"  shift, and go to state 69


state 53

   32 Vector_Type: VECTOR OF ADT .

    $default  reduce using rule 32 (Vector_Type)


state 54

   31 Vector_Type: VECTOR OF Scalar_Type .

    $default  reduce using rule 31 (Vector_Type)


state 55

   14 Certificate_Declaration: ID ":" CERTIFICATE "{" @3 . Field_Declarations @4 "}" ";"

    ID  shift, and go to state 64

    Field_Declarations  go to state 70
    Field_Declaration   go to state 66


state 56

   51 Class_Type: ADT CLASS "{" . @7 Field_Redefs @8 "}"

    $default  reduce using rule 49 (@7)

    @7  go to state 71


state 57

   70 Accuracy: ACCURACY . "=" FRACTION

    "="  shift, and go to state 72


state 58

   59 Range: RANGE . "=" Date_Bound
   60      | RANGE . "=" NUMBER
   61      | RANGE . "=" NUMBER DOTDOT NUMBER
   62      | RANGE . "=" Date_Bound DOTDOT Date_Bound
   63      | RANGE . "=" ">" NUMBER DOTDOT NUMBER
   64      | RANGE . "=" ">" Date_Bound DOTDOT Date_Bound
   65      | RANGE . "=" ">" NUMBER DOTDOT "<" NUMBER
   66      | RANGE . "=" ">" Date_Bound DOTDOT "<" Date_Bound
   67      | RANGE . "=" NUMBER DOTDOT "<" NUMBER
   68      | RANGE . "=" Date_Bound DOTDOT "<" Date_Bound
   69      | RANGE . "=" ID

    "="  shift, and go to state 73


state 59

    8 ADT_Declaration: ID ":" ADT "," Constraints . ";"

    ";"  shift, and go to state 74


state 60

   56 Constraints: Range . "," Accuracy
   57            | Range .

    ","  shift, and go to state 75

    ","       [reduce using rule 57 (Constraints)]
    $default  reduce using rule 57 (Constraints)


state 61

   58 Constraints: Accuracy .

    $default  reduce using rule 58 (Constraints)


state 62

   20 Base_Type: Base_Type "," Constraints .

    $default  reduce using rule 20 (Base_Type)


state 63

   33 Array_Type: Scalar_Type "[" NUMBER . "]"

    "]"  shift, and go to state 76


state 64

   17 Field_Declaration: ID . ":" Base_Type ";"
   18                  | ID . ":" ADT ";"
   19                  | ID . ":" ADT "," Constraints ";"

    ":"  shift, and go to state 77

